fix: Use Prisma singleton pattern for proper connection handling on Vercel
- Create lib/prisma.ts with singleton instance
- Update all API routes to use shared Prisma instance
- Fixes DATABASE_URL initialization on serverless functions

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,4 @@
 {
   "buildCommand": "npm run prisma:generate && npm run build",
-  "installCommand": "npm install",
-  "env": {
-    "NODE_ENV": "production"
-  },
-  "envPrefix": "NEXT_PUBLIC_"
+  "installCommand": "npm install"
 }
