--- a/package.json
+++ b/package.json
@@ -25,25 +25,39 @@
   "author": "Yash Jain",
   "license": "MIT",
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@hookform/resolvers": "^5.2.2",
+    "@prisma/client": "^5.7.0",
+    "autoprefixer": "^10.4.24",
+    "clsx": "^2.1.1",
+    "dotenv": "^16.3.1",
+    "lucide-react": "^0.563.0",
     "next": "^14.1.0",
+    "postcss": "^8.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@prisma/client": "^5.7.0",
+    "react-hook-form": "^7.71.1",
+    "recharts": "^3.7.0",
+    "tailwind-merge": "^3.4.0",
     "uuid": "^9.0.1",
-    "dotenv": "^16.3.1"
+    "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/jest": "^29.5.8",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
-    "typescript": "^5.3.3",
-    "prisma": "^5.7.0",
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "@typescript-eslint/parser": "^6.13.0",
     "eslint": "^8.54.0",
     "eslint-config-next": "^14.1.0",
     "jest": "^29.7.0",
-    "@types/jest": "^29.5.8",
-    "ts-jest": "^29.1.1"
+    "prisma": "^5.7.0",
+    "tailwindcss": "^3.4.17",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.3.3"
   }
 }
