--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,5 +26,5 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules", "src.backup", "dist", ".next"]
+  "exclude": ["node_modules", "src.backup", "dist", ".next", "scripts"]
 }
